WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18900
Password field has focus but can't type text (i.rememberthemilk.com)
https://bugs.webkit.org/show_bug.cgi?id=18900
Summary
Password field has focus but can't type text (i.rememberthemilk.com)
David Kilzer (:ddkilzer)
Reported
2008-05-05 16:18:45 PDT
* SUMMARY The password field on i.rememberthemilk.com gets focus, but the user can't type any text until they click in the field again. * STEPS TO REPRODUCE 1. Launch Safari/WebKit. 2. Go to URL:
http://i.rememberthemilk.com/
3. Hit Tab. 4. Type a dummy username. 5. Hit Tab. 6. Type a dummy password. * EXPECTED RESULTS Typing in Step 6 should appear in the password field. * ACTUAL RESULTS Typing in Step 6 does nothing (even though the password field appears to have focus). * REGRESSION Unknown. Only tested with Safari 3.1.1 on Mac OS X 10.5.x Leopard. * NOTES <
rdar://problem/5912383
>
Attachments
possible reduction
(245 bytes, text/html)
2008-05-06 06:44 PDT
,
Marcus
no flags
Details
Proposed patch, minus new layout test
(693 bytes, patch)
2008-05-06 17:21 PDT
,
Aaron Golden
no flags
Details
Formatted Diff
Diff
Patch v2
(4.41 KB, patch)
2008-05-07 04:02 PDT
,
David Kilzer (:ddkilzer)
adele
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Marcus
Comment 1
2008-05-06 06:44:47 PDT
Created
attachment 20985
[details]
possible reduction
David Kilzer (:ddkilzer)
Comment 2
2008-05-06 06:53:22 PDT
(In reply to
comment #0
)
> * REGRESSION > Unknown. Only tested with Safari 3.1.1 on Mac OS X 10.5.x Leopard.
This is not a regression. Safari 2.0.4 with original WebKit on Mac OS X 10.4.11 exhibits similar behavior. WebKit nightly build
r11976
exhibits the same behavior as ToT WebKit today (
r32901
).
David Kilzer (:ddkilzer)
Comment 3
2008-05-06 06:55:54 PDT
(In reply to
comment #1
)
> Created an attachment (id=20985) [edit] > possible reduction
Great reduction, Marcus! Thanks!
Aaron Golden
Comment 4
2008-05-06 17:21:20 PDT
Created
attachment 20991
[details]
Proposed patch, minus new layout test The patch makes HTMLInputElement handle the edge case where the document is changing the type of the focused node. The node needs to update its selection range after reattaching.
Adele Peterson
Comment 5
2008-05-06 17:49:49 PDT
Comment on
attachment 20991
[details]
Proposed patch, minus new layout test instead of setting the selection range directly, it might be better to call updateFocusAppearance with the right value for restorePreviousSelection
David Kilzer (:ddkilzer)
Comment 6
2008-05-07 04:02:30 PDT
Created
attachment 21000
[details]
Patch v2 Patch with layout test and changelogs. All existing layout tests pass with this change.
David Kilzer (:ddkilzer)
Comment 7
2008-05-07 10:15:47 PDT
Committed revision 32959.
David Kilzer (:ddkilzer)
Comment 8
2008-05-24 17:35:23 PDT
In the original page, the <input> element that held the password would change from type="text" to type="password" using an onfocus event. This bug is fixed for the original page. The new page uses two <input> tags, and changes their CSS class to make then hidden or visible. It works with mouse clicks, but fails with tabs. This seems to be a server-side issue that it doesn't do the same thing with tabbed focus as with mouse clicks.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug