WebCore:

Bug 18900: Password field has focus but can't type text (i.rememberthemilk.com)
        <https://bugs.webkit.org/show_bug.cgi?id=18900>

        Original patch by Aaron Golden and Tim Omernick.  Reviewed by Adele.

        Test: fast/forms/textfield-to-password-on-focus.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::setInputType): If the current node has
        focus, call updateFocusAppearance() to make sure its state is correct
        after changing its type.

LayoutTests:

        Bug 18900: Password field has focus but can't type text (i.rememberthemilk.com)
        <https://bugs.webkit.org/show_bug.cgi?id=18900>

        Reviewed by Adele.

        * fast/forms/textfield-to-password-on-focus-expected.txt: Added.
        * fast/forms/textfield-to-password-on-focus.html: Added.



Canonical link: https://commits.webkit.org/26162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32959 268f45cc-cd09-0410-ab3c-d52691b4dbfc